# checkersAI

./: .gitignore  CMakeLists.txt  README.md  model.cpp  model.hpp  model.pt  node.cpp  node.hpp  pos.cpp  pos.hpp  server.cpp
